--- a/ProyectoLupita/index.html
+++ b/ProyectoLupita/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoLupita/style.css">
-    <link rel="shortcut icon" href="../ProyectoLupita/img/christmas tree.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="christmas tree.ico" type="image/x-icon">
     <title>Galería Lupita 2021</title>
 </head>
 
@@ -26,25 +26,25 @@
     </header>
 
     <main>
-        <img id="img1" src="../ProyectoLupita/img/_MG_4034.JPG" alt="">
-        <img id="img2" src="../ProyectoLupita/img/_MG_4027.JPG" alt="">
-        <img id="img3" src="../ProyectoLupita/img/_MG_4029.JPG" alt="">
-        <img id="img4" src="../ProyectoLupita/img/_MG_4042.JPG" alt="">
-        <img id="img5" src="../ProyectoLupita/img/_MG_4043.JPG" alt="">
-        <img id="img6" src="../ProyectoLupita/img/_MG_4098.JPG" alt="">
-        <img id="img7" src="../ProyectoLupita/img/_MG_4118.JPG" alt="">
-        <img id="img8" src="../ProyectoLupita/img/_MG_4158.JPG" alt="">
-        <img id="img9" src="../ProyectoLupita/img/_MG_4163.JPG" alt="">
-        <img id="img10" src="../ProyectoLupita/img/_MG_4221.JPG" alt="">
-        <img id="img11" src="../ProyectoLupita/img/_MG_4224.JPG" alt="">
-        <img id="img12" src="../ProyectoLupita/img/_MG_4225.JPG" alt="">
-        <img id="img13" src="../ProyectoLupita/img/_MG_4231.JPG" alt="">
-        <img id="img14" src="../ProyectoLupita/img/_MG_4234.JPG" alt="">
-        <img id="img15" src="../ProyectoLupita/img/_MG_4238.JPG" alt="">
-        <img id="img16" src="../ProyectoLupita/img/_MG_4240.JPG" alt="">
-        <img id="img17" src="../ProyectoLupita/img/_MG_4250.JPG" alt="">
-        <img id="img18" src="../ProyectoLupita/img/_MG_4262.JPG" alt="">
-        <img id="img19" src="../ProyectoLupita/img/_MG_4285.JPG" alt="">
+        <img id="img1" src="_MG_4034.JPG" alt="">
+        <img id="img2" src="_MG_4027.JPG" alt="">
+        <img id="img3" src="_MG_4029.JPG" alt="">
+        <img id="img4" src="_MG_4042.JPG" alt="">
+        <img id="img5" src="_MG_4043.JPG" alt="">
+        <img id="img6" src="_MG_4098.JPG" alt="">
+        <img id="img7" src="_MG_4118.JPG" alt="">
+        <img id="img8" src="_MG_4158.JPG" alt="">
+        <img id="img9" src="_MG_4163.JPG" alt="">
+        <img id="img10" src="_MG_4221.JPG" alt="">
+        <img id="img11" src="_MG_4224.JPG" alt="">
+        <img id="img12" src="_MG_4225.JPG" alt="">
+        <img id="img13" src="_MG_4231.JPG" alt="">
+        <img id="img14" src="_MG_4234.JPG" alt="">
+        <img id="img15" src="_MG_4238.JPG" alt="">
+        <img id="img16" src="_MG_4240.JPG" alt="">
+        <img id="img17" src="_MG_4250.JPG" alt="">
+        <img id="img18" src="_MG_4262.JPG" alt="">
+        <img id="img19" src="_MG_4285.JPG" alt="">
     </main>
 
     <footer>
