--- a/ProyectoLupita/pagina1.html
+++ b/ProyectoLupita/pagina1.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoLupita/style.css">
-    <link rel="shortcut icon" href="../ProyectoLupita/img/christmas tree.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="christmas tree.ico" type="image/x-icon">
     <title>Temática y estilo</title>
 </head>
 
@@ -21,7 +21,7 @@
     </nav>
 
     <header>
-        <img src="../ProyectoLupita/img/60a301151ea5160802263f31_32A0022-LOW.jpg" alt="">
+        <img src="60a301151ea5160802263f31_32A0022-LOW.jpg" alt="">
         <h1 id="Título"><em>Temática y estilo</em></h1>
     </header>
 
