--- a/ProyectoLupita/pagina2.html
+++ b/ProyectoLupita/pagina2.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoLupita/style.css">
-    <link rel="shortcut icon" href="../ProyectoLupita/img/christmas tree.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="christmas tree.ico" type="image/x-icon">
     <title>Sobre mí</title>
 </head>
 
@@ -21,7 +21,7 @@
     </nav>
 
     <header>
-        <img src="../ProyectoLupita/img/_MG_4276 (1).JPG" alt="">
+        <img src="_MG_4276 (1).JPG" alt="">
         <h1 id="Título"><em>Sobre mí</em></h1>
     </header>
 
