--- a/ProyectoLupita/pagina3.html
+++ b/ProyectoLupita/pagina3.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoLupita/style.css">
-    <link rel="shortcut icon" href="../ProyectoLupita/img/christmas tree.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="christmas tree.ico" type="image/x-icon">
     <title>Influencias</title>
 </head>
 
@@ -21,7 +21,7 @@
     </nav>
 
     <header>
-        <img src="../ProyectoLupita/img/EYJ0EX_1.jpg"
+        <img src="EYJ0EX_1.jpg"
             alt="">
         <h1 id="influ"><em>Influencias</em></h1>
     </header>
@@ -32,7 +32,7 @@
         <br><br>
         <p id="henri"><strong>Henri Cartier-Bresson</strong> </p>
         <br>
-        <img id="viejito" src="../ProyectoLupita/img/Henri-Cartier-Bresson.jpg" alt="">
+        <img id="viejito" src="Henri-Cartier-Bresson.jpg" alt="">
         <br><br>
         <div id="bresson">
             <p>Bresson, conocido como el padre del fotoperiodismo fue un fotógrafo francés que se inició originalmente
@@ -47,10 +47,10 @@
             </p>
         </div>
         <br><br>
-        <img id="paloma" src="../ProyectoLupita/img/Henri-Cartier-Bresson-e1603277286303.jpg" alt="">
+        <img id="paloma" src="Henri-Cartier-Bresson-e1603277286303.jpg" alt="">
         <br><br>
         <img id="vato"
-            src="../ProyectoLupita/img/Foto-Henri-Cartier-Bresson.-Fondation-Henri-Cartier-Bresson-Magnum-Photos-1.jpg"
+            src="Foto-Henri-Cartier-Bresson.-Fondation-Henri-Cartier-Bresson-Magnum-Photos-1.jpg"
             alt="">
         <br><br>
 
@@ -63,9 +63,9 @@
                 vinculándose de este modo a la denuncia medioambiental. <br><br> Actualmente reside en Tenerife donde prepara intervenciones artísticas en entorno urbano. 
             <br><br> https://instagram.com/zireja?utm_medium=copy_link</p>
         </div>
-        <img id="zireja" src="../ProyectoLupita/img/zireja (1).jpg" alt="">
-        <img id="verde" src="../ProyectoLupita/img/DSC07005.png" alt="">
-        <img id="foto" src="../ProyectoLupita/img/fotonoticia_20170308105956_1200.jpg" alt="">
+        <img id="zireja" src="zireja (1).jpg" alt="">
+        <img id="verde" src="DSC07005.png" alt="">
+        <img id="foto" src="fotonoticia_20170308105956_1200.jpg" alt="">
 
     </main>
 
