--- a/ProyectoLupita/index.html
+++ b/ProyectoLupita/index.html
@@ -26,25 +26,25 @@
     </header>
 
     <main>
-        <img id="img1" src="_MG_4034.JPG" alt="">
-        <img id="img2" src="_MG_4027.JPG" alt="">
-        <img id="img3" src="_MG_4029.JPG" alt="">
-        <img id="img4" src="_MG_4042.JPG" alt="">
-        <img id="img5" src="_MG_4043.JPG" alt="">
-        <img id="img6" src="_MG_4098.JPG" alt="">
-        <img id="img7" src="_MG_4118.JPG" alt="">
-        <img id="img8" src="_MG_4158.JPG" alt="">
-        <img id="img9" src="_MG_4163.JPG" alt="">
-        <img id="img10" src="_MG_4221.JPG" alt="">
-        <img id="img11" src="_MG_4224.JPG" alt="">
-        <img id="img12" src="_MG_4225.JPG" alt="">
-        <img id="img13" src="_MG_4231.JPG" alt="">
-        <img id="img14" src="_MG_4234.JPG" alt="">
-        <img id="img15" src="_MG_4238.JPG" alt="">
-        <img id="img16" src="_MG_4240.JPG" alt="">
-        <img id="img17" src="_MG_4250.JPG" alt="">
-        <img id="img18" src="_MG_4262.JPG" alt="">
-        <img id="img19" src="_MG_4285.JPG" alt="">
+        <img id="img1" src="/img_MG_4034.JPG" alt="">
+        <img id="img2" src="/img_MG_4027.JPG" alt="">
+        <img id="img3" src="/img_MG_4029.JPG" alt="">
+        <img id="img4" src="/img_MG_4042.JPG" alt="">
+        <img id="img5" src="/img_MG_4043.JPG" alt="">
+        <img id="img6" src="/img_MG_4098.JPG" alt="">
+        <img id="img7" src="/img_MG_4118.JPG" alt="">
+        <img id="img8" src="/img_MG_4158.JPG" alt="">
+        <img id="img9" src="/img_MG_4163.JPG" alt="">
+        <img id="img10" src="/img_MG_4221.JPG" alt="">
+        <img id="img11" src="/img_MG_4224.JPG" alt="">
+        <img id="img12" src="/img_MG_4225.JPG" alt="">
+        <img id="img13" src="/img_MG_4231.JPG" alt="">
+        <img id="img14" src="/img_MG_4234.JPG" alt="">
+        <img id="img15" src="/img_MG_4238.JPG" alt="">
+        <img id="img16" src="/img_MG_4240.JPG" alt="">
+        <img id="img17" src="/img_MG_4250.JPG" alt="">
+        <img id="img18" src="/img_MG_4262.JPG" alt="">
+        <img id="img19" src="/img_MG_4285.JPG" alt="">
     </main>
 
     <footer>
